--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oraciones</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;400&display=swap');
 
-	<title>Svelte app</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
-	<script defer src='/build/bundle.js'></script>
+        body {
+            font-family: 'Bitter', serif;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>Paso 1</h1>
+    <p>Dios, concédeme la serenidad para aceptar las cosas que no puedo cambiar,
+        valor para cambiar las cosas que puedo y sabiduría para distinguir la diferencia.
+        Hágase tu voluntad y no la mía.</p>
+    <hr>
+    <h1>Paso 2</h1>
+    <p>Padre que estás en los cielos, yo sé en mi corazón que solamente tu puedes devolverme el sano juicio.
+        Humíldemente, te pido que elimines de mí en este día, todo pensamiento retorcido y comportamiento adictivo.
+        Sana mi espíritu y devuelveme una mente clara.</p>
+    <hr>
+    <h1>Paso 3</h1>
+    <p>Dios, me ofrezco a Ti para que obres en mí y hagas conmigo Tu voluntad.
+        Líbrame de mi propio encadenamiento para que pueda cumplir mejor con Tu voluntad.
+        Librame de mis dificultades y que la victoria sobre ellas sea el testimonio para aquellos
+        a quién yo ayude de Tu Poder, Tu Amor y de la manera en la que tú quieres que vivamos.
+        Que siempre haga Tu Voluntad.</p>
 </body>
+
 </html>
