--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         Librame de mis dificultades y que la victoria sobre ellas sea el testimonio para aquellos
         a quién yo ayude de Tu Poder, Tu Amor y de la manera en la que tú quieres que vivamos.
         Que siempre haga Tu Voluntad.</p>
+
+    <h1>Paso </h1>
+    <p>Querido Diosm soy quien ha hecho un desastre de mi vida.
+        Lo he hecho yo, pero no puedo arreglarla. Mis errores 
+        son míos y voy a empezar un minucioso inventario de mis
+        defectos. Pero también incluiré lo que es bueno.
+        Oro por la fortaleza para cumplir esta tarea.
+    </p>
 </body>
 
 </html>
