--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         a quién yo ayude de Tu Poder, Tu Amor y de la manera en la que tú quieres que vivamos.
         Que siempre haga Tu Voluntad.</p>
 
-    <h1>Paso </h1>
+    <h1>Paso 4</h1>
     <p>Querido Diosm soy quien ha hecho un desastre de mi vida.
         Lo he hecho yo, pero no puedo arreglarla. Mis errores 
         son míos y voy a empezar un minucioso inventario de mis
