--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Que siempre haga Tu Voluntad.</p>
     <hr>
     <h1>Paso 4</h1>
-    <p>Querido Diosm soy quien ha hecho un desastre de mi vida.
+    <p>Querido Dios, soy quien ha hecho un desastre de mi vida.
         Lo he hecho yo, pero no puedo arreglarla. Mis errores 
         son míos y voy a empezar un minucioso inventario de mis
         defectos. Pero también incluiré lo que es bueno.
