--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oraciones</title>
+    <title>12 Pasos</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;400&display=swap');
 
@@ -25,8 +25,8 @@
         }
 
         article p:last-of-type {
-            font-size: 80%;       
-            text-align: center;
+            font-size: large;       
+            text-align: justify;
             line-height: 2em;  
         }
 
